# ledcpp

./: .gitmodules  Color.cpp  Frame.cpp  LICENSE  README.md  Screen.cpp  helpers.cpp  main.cpp  makefile  ws2811.c
app/: App.cpp  LoopApp.cpp
client/: index.html  script.js  style.css
client/css/: bootstrap-theme.css  bootstrap-theme.min.css
client/js/: jquery-ui.min.js
cpp/: .gitignore  Simplex.cpp  helpers.cpp  main.cpp
cpp/app/: App.cpp  App.h  LoopApp.cpp  LoopApp.h  ShaderApp.cpp  ShaderApp.h  Simplex.cpp  Simplex.h  helpers.cpp  helpers.h
cpp/example/: Swirl.cpp
cpp/screen/: Color.cpp  Color.h  Frame.cpp  Frame.h  Screen.cpp  Screen.h
cpp/template/: App.cpp  App.h  CMakeLists.txt  LoopApp.cpp  LoopApp.h  ShaderApp.cpp  ShaderApp.h  appInterface.cpp  appInterface.h  makefile
screen/: Color.cpp  Screen.cpp
server/: apprunner.py  apps.py  nocache.py  server.py  sourcefile.py  test.py  userapp.py
